fix main navigation font alignment and spacing

--- a/gp-winterthur/style.css
+++ b/gp-winterthur/style.css
@@ -726,6 +726,9 @@ header .inside-header {
 	border-radius: 17.5px;
 	transition: background-color 0.3s, color 0.3s;
 	text-transform: uppercase;
+	line-height: 35px;
+	text-align: center;
+	letter-spacing: 0.6px;
 }
 
 .main-navigation .main-nav ul li a:hover {
@@ -736,11 +739,6 @@ header .inside-header {
 .main-navigation .main-nav ul ul li a:hover {
 	color: #004B50 !important;
 	background-color: #A6B1F1 !important;
-}
-
-.main-navigation .main-nav ul li a {
-	line-height: 35px;
-	text-align: center
 }
 
 .main-navigation .main-nav ul li[class*="current-menu-"]>aa {
@@ -766,9 +764,10 @@ header .inside-header {
 
 .main-navigation .main-nav ul ul li a {
 	line-height: 35px;
-	padding: 0px 20px;
+	padding: 0px 0px;
 	font-size: 16px;
 	text-transform: none;
+	white-space: nowrap;
 }
 
 .menu-item-has-children .dropdown-menu-toggle {
@@ -792,11 +791,6 @@ header .inside-header {
 .main-navigation ul ul {
 	transition: none !Important
 }
-
-.main-navigation .main-nav ul li a {
-	letter-spacing: 0.6px;
-}
-
 
 .mobile-menu-open .inside-header.grid-container {
 	height: 100dvh;
@@ -1013,6 +1007,7 @@ body {
 		font-size: clamp(12px, 1.3vw, 16px);
 		border-radius: calc(0.5* clamp(25px, 3vw, 35px));
 		line-height: clamp(25px, 3vw, 35px);
+		letter-spacing: normal;
 	}
 }
 
